added chapter2,3 assignments

--- a/SampleProgram/SampleProgram.csproj
+++ b/SampleProgram/SampleProgram.csproj
@@ -5,4 +5,36 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="assignments\" />
+    <None Remove="assignments\chapter1\" />
+    <None Remove="assignments\chapter2\" />
+    <None Remove="assignments\chapter3\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="assignments\" />
+    <Folder Include="assignments\chapter1\" />
+    <Folder Include="assignments\chapter2\" />
+    <Folder Include="assignments\chapter3\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Eg1.cs" />
+    <Compile Remove="Eg2.cs" />
+    <Compile Remove="Eg3.cs" />
+    <Compile Remove="Program.cs" />
+    <Compile Remove="assignments\chapter2\Student.cs" />
+    <Compile Remove="assignments\ProductOrderList.cs" />
+    <Compile Remove="assignments\chapter3\Assignment1.cs" />
+    <Compile Remove="assignments\chapter3\Assignment2.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Eg1.cs" Condition=" '$(EnableDefaultCompileItems)' == 'true' " />
+    <None Include="Eg2.cs" Condition=" '$(EnableDefaultCompileItems)' == 'true' " />
+    <None Include="Eg3.cs" Condition=" '$(EnableDefaultCompileItems)' == 'true' " />
+    <None Include="Program.cs" Condition=" '$(EnableDefaultCompileItems)' == 'true' " />
+    <None Include="assignments\chapter2\Student.cs" Condition=" '$(EnableDefaultCompileItems)' == 'true' " />
+    <None Include="assignments\ProductOrderList.cs" Condition=" '$(EnableDefaultCompileItems)' == 'true' " />
+    <None Include="assignments\chapter3\Assignment1.cs" Condition=" '$(EnableDefaultCompileItems)' == 'true' " />
+    <None Include="assignments\chapter3\Assignment2.cs" Condition=" '$(EnableDefaultCompileItems)' == 'true' " />
+  </ItemGroup>
 </Project>
